<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="buildVersion">Build Version 1.0</string>
    <string name="app_name">JASBTaxCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="SubmitButtonText">Submit</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Calculate Tax</item>
        <item>Impact of Increment</item>
        <item>How to Save Tax</item>
        <item>How to Save Tax</item>
        <item>Plan to Save Tax</item>
        <item>Contact Us</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_calculatetax</item>
        <item>@drawable/ic_increaseimpact</item>
        <item>@drawable/ic_savetax_1</item>
        <item>@drawable/ic_savetax_2</item>
        <item>@drawable/ic_plantosavetax</item>
        <item>@drawable/ic_contact</item>
    </array>
    <array name="save_tax_array">
        <item>Working on the S3 image uploading (android) </item>
        <item>Working with Naveen to create the media sharing framework in iOS </item>
        <item>Working with team (Zeeshan + Umair + Noorain) on mBooks application </item>
        <item>CTV android 2nd release targeted for tablets + Google analytics + important bugzilla issues </item>
        <item>Need to sit with QA team for mobile testing document review</item>
        <item>Create the mobile training material for both iOS + Android</item>
        <item>Create the outline for an individual platform initially</item>
        <item>Need more details about Image uploading on S3 from Umair Tariq </item>
        <item>Provided the Amazon S3 details + UI flow description to Naveen</item>
        <item>Working with iOS media sharing framework/library project with Naveen</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="webViewSaveTax">Save Tax</string>
    <string name="webViewTemrsOfUse">Acceptance of Terms</string>
    <string name="webViewContactUs">Contact Us</string>
    <string name="email_hint">Email Address</string>
    <string name="PlanSaveTaxHeading">Tax Planning </string>
    <string name="PlanSaveTaxDetailedText">        	Carbonated.TV respects the privacy rights of our users and is
			committed to protecting the information collected through its online
			services and websites. We have adopted this privacy policy to explain
			how we collect, store and use the information collected in connection
			with our Online Services (the "Privacy Policy").
			\n\n
			Through the usage of the Carbonated.TV Website or downloading
			from the Site, users agree to the usage and gathering of your
			personal information (as hereunder described), all in respect to the
			Terms and Conditions set hereunder. Carbonated.TV reserves the right to
			change this Privacy Policy at any time and without notice, and it is.</string>
    <string name="saveTaxLVExp">Save Tex Expanable List View</string>

    <!-- Tax Calculator Fragment Strings -->
    <string name="tab_annually">Annually</string>
    <string name="tab_monthly">Monthly</string>
    <string name="btn_calculate">Calculate</string>
    <string name="header_tax_calculator">Tax Calculator</string>
    <string name="header_tax_impact">Impact Of Increment </string>
    <string name="header_tax_goals">Tax Goals</string>
    <string name="header_impact_goals">Impact Of Increment On Goals</string>
    <string name="title_activity_tax_result">TaxResultActivity</string>
    <string name="title_activity_impact_result">ImpactResultActivity</string>
    <string name="salaried_goals">Salaried Individuals</string>
    <string name="non_salaried_goals">Non-Salaried Individuals</string>
    <string name="header_contact_us">Contact Us</string>
    <string name="timing_heading">Timing</string>
    <string name="address_heading">Address</string>
    <string name="address_text">1104, Uni Tower, \n I.I Chundigar Road \n Karachi. \n PABX: +92-21-32468154-55 \n +92-21-32468158 \n Fax: +92-21-32468157 </string>
    <string name="email_heading">Email: </string>
    <string name="email_address">  <u>contact@jasb-associates.com</u></string>
    
    <string name="karachi_office">Karachi Office</string>
    <string name="islamabad_office">Islamabad Office</string>
    <string name="timing1_karachi_office">7:00 and 18:00</string>
    <string name="timing2_karachi_office">9:00 and 15:00</string>
    <string name="timing1_islamabad_office">8:00 and 19:00</string>
    <string name="timing2_islamabad_office">9:00 and 16:00</string>
    <string name="days1_karachi_office">Monday to Friday</string>
    <string name="days2_karachi_office">Saturday</string>
    <string name="days1_islamabad_office">Tuesday to Thursday</string>
    <string name="days2_islamabad_office">Sunday</string>

</resources>