<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        
	<TextView android:id="@+id/PlanSaveTax_Heading"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="25sp"
	    android:layout_marginTop="12dp"
	    android:layout_gravity="center"
	    android:text="@string/PlanSaveTaxHeading" />
        
    <TextView
	    android:id="@+id/PlanSaveTaxTextView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:layout_margin="10dp"
	    android:text="" />
	
	<EditText android:id="@+id/EmailEditText"
	    android:inputType="textEmailAddress"
	    android:hint="@string/email_hint"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />
	
	<Button android:id="@+id/SubmitButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:text="@string/SubmitButtonText"
	    android:layout_gravity="center" />

</LinearLayout>
